--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Create.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Create.cshtml
@@ -17,16 +17,6 @@
 
                     <div class="form-row">
                         <div class="form-group col-md-4">
-                            <label asp-for="FormaPago" class="control-label">Forma de Pago</label>
-                            <select asp-for="FormaPago" class="form-control">
-                                <option value="1">EFECTIVO</option>
-                                <!-- Agrega otras opciones según sea necesario -->
-                            </select>
-                            <span asp-validation-for="FormaPago" class="text-danger"></span>
-                        </div>
-
-
-                        <div class="form-group col-md-4">
                             <label asp-for="Descuento" class="control-label">Descuento</label>
                             <input asp-for="Descuento" class="form-control" />
                             <span asp-validation-for="Descuento" class="text-danger"></span>
@@ -37,25 +27,17 @@
                             <input asp-for="Impuesto" class="form-control" />
                             <span asp-validation-for="Impuesto" class="text-danger"></span>
                         </div>
-                    </div>
 
-                    <div class="form-row">
                         <div class="form-group col-md-4">
-                            <label asp-for="FacturaTotal" class="control-label">Total de la Factura</label>
-                            <input asp-for="FacturaTotal" class="form-control" />
-                            <span asp-validation-for="FacturaTotal" class="text-danger"></span>
+                            <label asp-for="SubTotal" class="control-label">SubTotal $</label>
+                            <input asp-for="SubTotal" class="form-control" />
+                            <span asp-validation-for="SubTotal" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-4">
-                            <label asp-for="FacturaPagado" class="control-label">Total Pagado</label>
-                            <input asp-for="FacturaPagado" class="form-control" />
-                            <span asp-validation-for="FacturaPagado" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="FacturaCambio" class="control-label">Cambio de la Factura</label>
-                            <input asp-for="FacturaCambio" class="form-control" />
-                            <span asp-validation-for="FacturaCambio" class="text-danger"></span>
+                            <label asp-for="Total" class="control-label">Total $</label>
+                            <input asp-for="Total" class="form-control" />
+                            <span asp-validation-for="Total" class="text-danger"></span>
                         </div>
                     </div>
 
@@ -78,7 +60,6 @@
                             <span asp-validation-for="TelefonoCliente" class="text-danger"></span>
                         </div>
                     </div>
-
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label asp-for="DUICliente" class="control-label">DUI del Cliente</label>
