--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Edit.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Edit.cshtml
@@ -14,30 +14,6 @@
             <div class="col-md-8">
                 <form asp-action="Edit">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="IdVenta" class="form-control" />
-
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label asp-for="NumeroFactura" class="control-label">Número de Factura</label>
-                            <input asp-for="NumeroFactura" class="form-control" disabled />
-                            <span asp-validation-for="NumeroFactura" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="FechaFacturacion" class="control-label">Fecha de Facturación</label>
-                            <input asp-for="FechaFacturacion" class="form-control" disabled />
-                            <span asp-validation-for="FechaFacturacion" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="FormaPago" class="control-label">Forma de Pago</label>
-                            <select asp-for="FormaPago" class="form-control">
-                                <option value="1">EFECTIVO</option>
-                                <!-- Agrega otras opciones según sea necesario -->
-                            </select>
-                            <span asp-validation-for="FormaPago" class="text-danger"></span>
-                        </div>
-                    </div>
 
                     <div class="form-row">
                         <div class="form-group col-md-4">
@@ -53,25 +29,18 @@
                         </div>
 
                         <div class="form-group col-md-4">
-                            <label asp-for="FacturaTotal" class="control-label">Total de la Factura</label>
-                            <input asp-for="FacturaTotal" class="form-control" />
-                            <span asp-validation-for="FacturaTotal" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label asp-for="FacturaPagado" class="control-label">Total Pagado</label>
-                            <input asp-for="FacturaPagado" class="form-control" />
-                            <span asp-validation-for="FacturaPagado" class="text-danger"></span>
+                            <label asp-for="SubTotal" class="control-label">SubTotal $</label>
+                            <input asp-for="SubTotal" class="form-control" />
+                            <span asp-validation-for="SubTotal" class="text-danger"></span>
                         </div>
 
                         <div class="form-group col-md-4">
-                            <label asp-for="FacturaCambio" class="control-label">Cambio de la Factura</label>
-                            <input asp-for="FacturaCambio" class="form-control" />
-                            <span asp-validation-for="FacturaCambio" class="text-danger"></span>
+                            <label asp-for="Total" class="control-label">Total $</label>
+                            <input asp-for="Total" class="form-control" />
+                            <span asp-validation-for="Total" class="text-danger"></span>
                         </div>
                     </div>
+
 
                     <div class="form-row">
                         <div class="form-group col-md-4">
@@ -92,7 +61,6 @@
                             <span asp-validation-for="TelefonoCliente" class="text-danger"></span>
                         </div>
                     </div>
-
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label asp-for="DUICliente" class="control-label">DUI del Cliente</label>
